--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2025.6.15
 distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.4
+django-cors-headers==4.7.0
 django-rest-framework==0.1.0
 djangorestframework==3.16.0
 gunicorn==23.0.0
